syntax  =  "proto2";

enum STATUS {
  ERROR  =  0;
  PENDING  =  1;
  SERVER_ACK  =  2;
  DELIVERY_ACK  =  3;
  READ  =  4;
  PLAYED  =  5;
}

enum STUBTYPE {
  UNKNOWN =  0;
  REVOKE =  1;
  CIPHERTEXT =  2;
  FUTUREPROOF =  4;
  NON_VERIFIED_TRANSITION =  5;
  UNVERIFIED_TRANSITION =  6;
  VERIFIED_TRANSITION =  7;
  VERIFIED_LOW_UNKNOWN =  8;
  VERIFIED_HIGH =  9;
  VERIFIED_INITIAL_UNKNOWN =  10;
  VERIFIED_INITIAL_LOW =  11;
  VERIFIED_INITIAL_HIGH =  12;
  VERIFIED_TRANSITION_ANY_TO_NONE =  13;
  VERIFIED_TRANSITION_ANY_TO_HIGH =  14;
  VERIFIED_TRANSITION_HIGH_TO_LOW =  15;
  VERIFIED_TRANSITION_HIGH_TO_UNKNOWN =  16;
  VERIFIED_TRANSITION_UNKNOWN_TO_LOW =  17;
  VERIFIED_TRANSITION_LOW_TO_UNKNOWN =  18;
  VERIFIED_TRANSITION_NONE_TO_LOW =  19;
  VERIFIED_TRANSITION_NONE_TO_UNKNOWN =  20;
  GROUP_CREATE =  21;
  GROUP_CHANGE_SUBJECT =  22;
  GROUP_CHANGE_ICON =  23;
  GROUP_CHANGE_INVITE_LINK =  24;
  GROUP_CHANGE_DESCRIPTION =  25;
  GROUP_CHANGE_RESTRICT =  26;
  GROUP_CHANGE_ANNOUNCE =  27;
  GROUP_PARTICIPANT_ADD =  28;
  GROUP_PARTICIPANT_REMOVE =  29;
  GROUP_PARTICIPANT_PROMOTE =  30;
  GROUP_PARTICIPANT_DEMOTE =  31;
  GROUP_PARTICIPANT_INVITE =  32;
  GROUP_PARTICIPANT_LEAVE =  33;
  GROUP_PARTICIPANT_CHANGE_NUMBER =  34;
  BROADCAST_CREATE =  35;
  BROADCAST_ADD =  36;
  BROADCAST_REMOVE =  37;
  GENERIC_NOTIFICATION =  38;
  E2E_IDENTITY_CHANGED =  39;
  E2E_ENCRYPTED =  40;
  CALL_MISSED_VOICE =  41;
  CALL_MISSED_VIDEO =  42;
  INDIVIDUAL_CHANGE_NUMBER =  43;
  GROUP_DELETE =  44;
  GROUP_ANNOUNCE_MODE_MESSAGE_BOUNCE =  45;
  CALL_MISSED_GROUP_VOICE =  46;
  CALL_MISSED_GROUP_VIDEO =  47;
  PAYMENT_CIPHERTEXT =  48;
  PAYMENT_FUTUREPROOF =  49;
  PAYMENT_TRANSACTION_STATUS_UPDATE_FAILED =  50;
  PAYMENT_TRANSACTION_STATUS_UPDATE_REFUNDED =  51;
  PAYMENT_TRANSACTION_STATUS_UPDATE_REFUND_FAILED =  52;
  PAYMENT_TRANSACTION_STATUS_RECEIVER_PENDING_SETUP =  53;
  PAYMENT_TRANSACTION_STATUS_RECEIVER_SUCCESS_AFTER_HICCUP =  54;
  PAYMENT_ACTION_ACCOUNT_SETUP_REMINDER =  55;
  PAYMENT_ACTION_SEND_PAYMENT_REMINDER =  56;
  PAYMENT_ACTION_SEND_PAYMENT_INVITATION =  57;
}

message WebMessageInfo {
  optional MessageKey key =  1;
  optional Message message =  2;
  optional uint64 messageTimestamp = 3;
  optional STATUS status = 4;
  optional string participant  =  5;
  optional bool ignore  =  6;
  optional bool starred =  7;
  optional bool broadcast =  8;
  optional string pushName  =  9;
  optional string mediaCiphertextSha256  =  10;
  optional bool multicast  =  11;
  optional bool urlText  =  12;
  optional bool urlNumber =  13;
  optional STUBTYPE messageStubType  =  14;
  optional bool clearMedia =  15;
  optional string messageStubParameters  =  16;
  optional uint32 duration =  17;
  optional string labels  =  18;
  optional bytes paymentInfo  =  19;
}

message MessageKey {
    optional string remoteJid = 1;
    optional bool fromMe = 2;
    optional string id = 3;
    optional string participant = 4;
}

message Message {
    optional string conversation = 1;
    /*
    *all of that information is messages
    *TODO:// implement all of them

    optional senderKeyDistributionMessage = 2;
    optional imageMessage = 3;
    optional contactMessage = 4;
    optional locationMessage = 5;
    optional extendedTextMessage = 6;
    optional documentMessage = 7;
    optional audioMessage = 8;
    optional videoMessage = 9;
    optional call = 10;
    optional chat = 11;
    optional protocolMessage = 12;
    optional contactsArrayMessage = 13;
    optional highlyStructuredMessage = 14;
    optional fastRatchetKeySenderKeyDistributionMessage = 15;
    optional sendPaymentMessage = 16;
    optional liveLocationMessage = 18;
    optional stickerMessage = 20;
    optional requestPaymentMessage = 21;
    */
}

